force-app/main/default/objects/Account/fields/ContactEmails__c.field-meta.xml
<CustomField>
    <fullName>ContactEmails__c</fullName>
    <label>ContactEmails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>