force-app/main/default/objects/Account/fields/Is_owner_current_user__c.field-meta.xml
<CustomField>
    <fullName>Is_owner_current_user__c</fullName>
    <formula>IF( OwnerId  =  $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is owner current user?</label>
    <type>Checkbox</type>
</CustomField>